# Jarvis

./: .env  .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  extending.md
docs/modules/: actions.md  automation.md  cognition.md  core.md  memory.md  models_runtime.md  modules.md  routing.md  runtime.md  tools.md
runtime_perf_after_lazy_indexing/: jarvis.db
runtime_test_smoke/: jarvis.db
tests/: conftest.py  test_agent_mode_phase2.py  test_audio_events.py  test_autonomy_api.py  test_autonomy_cli.py  test_autonomy_execution.py  test_autonomy_mission_control.py  test_autonomy_persistence.py  test_autonomy_planning.py  test_autonomy_runtime.py  test_autonomy_strong_verification.py  test_autonomy_system_integration.py  test_autonomy_unity_bridge_integration.py  test_autonomy_unity_integration.py  test_autonomy_verification.py  test_backpressure.py  test_benchmark.py  test_chat_engine.py  test_chat_routing.py  test_clap_detection.py  test_code_agent_agent.py  test_code_agent_change_generator.py  test_code_agent_git.py  test_code_agent_llm.py  test_code_agent_llm_router.py  test_code_agent_patches.py  test_code_agent_project_memory.py  test_code_agent_repo_learning.py  test_code_agent_repo_library.py  test_code_agent_runtime.py  test_code_agent_search.py  test_code_agent_skills.py  test_desktop_agent_runtime.py  test_desktop_app.py  test_desktop_bootstrap_compat.py  test_desktop_code_agent_ui.py  test_desktop_conversation_ui.py  test_desktop_runtime_routing.py  test_desktop_theme.py  test_desktop_visual_core.py  (+71 more)
voice_samples/: IMPORTANT.txt
(+407 files in other folders)
